# GreedySnake

./: CMakeLists.txt  readme.md
data/: preText.txt  score.txt
include/: color.hpp  food.hpp  run.hpp  scene.hpp  score.hpp  snake.hpp  utility.hpp  welcome.hpp
src/: food.cc  main.cc  run.cc  scene.cc  score.cc  snake.cc  welcome.cc
